# SyntTask

./: CMakeLists.txt  README.md  SetAVL.h  class_tests  class_tests.cpp  compressed_pair.h  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test_script.py  trial_task  trial_task.cpp
